# QMLBarch

./: CMakeLists.txt  FileListModel.cpp  FileListModel.h  Main.qml  barch.cpp  barch.hpp  bmp_io.cpp  bmp_io.h  main.cpp
components/: ErrorDialog.qml
